subprojects {
    version = '0.2.0'
    group = 'com.stehno.effigy'

    apply plugin: 'groovy'
    apply plugin: 'codenarc'

    compileJava {
        sourceCompatibility = 8
        targetCompatibility = 8
    }

    compileGroovy {
        groovyOptions.optimizationOptions.indy = false
    }

    configurations {
        groovyDoc
    }

    repositories {
        jcenter()
    }

    dependencies {
        compile 'org.codehaus.groovy:groovy-all:2.4.0'

        testCompile 'junit:junit:4.11'
        testCompile 'org.mockito:mockito-all:1.9.5'

        groovyDoc "org.codehaus.groovy:groovy-groovydoc:2.4.0"
        groovyDoc "org.codehaus.groovy:groovy-ant:2.4.0"
    }

    test {
        jvmArgs '-Xverify:none'
    }

    groovydoc {
        groovyClasspath = configurations.groovyDoc
    }

    codenarc {
        toolVersion = '0.22'
    }

    codenarcMain {
        ignoreFailures false
        configFile file('../config/codenarc/codenarc-main.rules')

        maxPriority1Violations 0
        maxPriority2Violations 10
        maxPriority3Violations 20
    }

    codenarcTest {
        // we won't fail the build for test inspection errors
        ignoreFailures true
        configFile file('../config/codenarc/codenarc-test.rules')
    }
}

// TODO: need a way to build the guide from gradle

task wrapper(type: Wrapper) {
    gradleVersion = '2.3'
}